@@ -1,4 +1,5 @@
 0.04
+- Add Test::NoWarnings to tests.
 
 0.03 (July 16, 2012)
 - New version of build system.
